# sema

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: publish-vscode.yml  publish.yml
docs/: README.md  architecture.md  benchmarks.md  claude-code.md  cli-reference.md  codex.md  configuration.md  contributing.md  cursor.md  devops-guard-plan.md  devops-guard.md  faq.md  grok.md  installation.md  languages.md  managing-sema.md  mcp-tools.md  multi-project.md  opencode.md  roadmap.md  terminal-app-plan.md  terminal-app.md  troubleshooting.md  vscode-workspace.md  why-sema.md
scripts/: release-pypi.sh  release-vscode.sh
sema/: cli.py  query_server.py  redact.py  reuse.py  skills.py
sema/agent/: __init__.py  attachments.py  loop.py  ops.py  permissions.py  plan_artifact.py  prefs.py  session.py  tools.py  workflow.py
sema/devops/: __init__.py  gate.py  k8s_secrets.py  policy.py  runner.py  secrets.py  shims.py  state.py
sema/indexer/: builtins.py  chunker.py  embedder.py  parser.py
sema/mcp/: devops_tools.py  registry.py  server.py  tools.py
sema/store/: bm25.py  chroma.py  hashes.py  schema.py
sema/tui/: __init__.py  app.py  commands.py  logo.py
sema/utils/: file_walker.py  gitignore.py  grep.py  repo_map.py  watcher.py
tests/: conftest.py  test_bm25.py  test_call_graph.py  test_chunker.py  test_embedder.py  test_file_walker.py  test_gitignore.py  test_grep.py  test_hashes.py  test_index_commands.py  test_install_diagnostics.py  test_install_script.py  test_parser.py  test_query_server.py  test_redact.py  test_registry.py  test_reuse.py  test_setup_commands.py  test_skills.py  test_status.py  test_store.py  test_tools.py  test_update_agents.py  test_watcher.py
tests/agent/: test_api_providers_live.py  test_integration.py  test_loop.py  test_ops.py  test_permissions.py  test_prefs.py  test_providers.py  test_session.py  test_tools.py  test_workflow_and_artifacts.py
tests/devops/: test_gate.py  test_k8s_secrets.py  (+2 more)
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
(+64 files in other folders)
