[project]
name = "sema-mcp"
version = "0.1.1"
description = "Semantic codebase indexer and MCP server for Claude Code"
authors = [{name = "Masih Moloodian", email = "masihmoloodian@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["mcp", "claude-code", "semantic-search", "codebase", "ai", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "tree-sitter>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-go>=0.23",
    "click>=8.0",
    "rich>=13.0",
    "watchdog>=4.0",
    "gitpython>=3.1",
    "pathspec>=0.12",
    "pydantic>=2.0",
    "rank-bm25>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.scripts]
sema = "sema.cli:main"

[project.urls]
Homepage = "https://github.com/masihmoloodian/sema"
Issues = "https://github.com/masihmoloodian/sema/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Package only the sema/ code. Explicit `packages` is required once the
# distribution name differs from the import package name, and it keeps the
# sdist from sweeping in vscode-extension/, tests/, docs/, etc.
[tool.hatch.build.targets.wheel]
packages = ["sema"]

[tool.hatch.build.targets.sdist]
only-include = ["sema", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
